<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Demo</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_switch_host">SwitchHostDemo</string>
    <string name="title_activity_amap">AmapDemo</string>
    <string name="title_activity_voice">VoiceDemo</string>
    <string name="title_activity_camera">CameraDemo</string>
    <string name="title_activity_wxshare">WXShareDemo</string>
    <string name="testbtnc">测试</string>
    <string name="formalbtnc">正式</string>
    <string name="hostname">主机名称 </string>
    <string name="edithost">请输入主机名称!</string>
    <string name="hosttest">测试IP</string>
    <string name="edittest">请输入测试ip!</string>
    <string name="hostformal">正式IP</string>
    <string name="editformal">请输入正式ip!</string>
    <string name="refreship">刷新主机ip</string>
    <string name="shake">摇一摇开始定位</string>
    <string name="say">按住请说话</string>

</resources>
