<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".SwitchHostActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        >
          
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hostname" />
		    
		    <TextView
		        android:layout_width="@dimen/activity_vertical_margin"
		        android:layout_height="wrap_content"
		        android:text="" />
		    
		    <EditText
		        android:id ="@+id/hostname"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/edithost" 
		        android:singleLine="true"/>	        
	    </LinearLayout> 
	    
	     
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hosttest" />
		    
		    <TextView
		        android:layout_width="@dimen/activity_vertical_margin"
		        android:layout_height="wrap_content"
		        android:text="" />
		    
		    <EditText
		        android:id ="@+id/testaddr"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/edittest" 
		        android:singleLine="true"/>	        
	    </LinearLayout> 
	    
	    
	    <LinearLayout
	        android:layout_width="match_parent"
	        android:layout_height="wrap_content"
	        android:orientation="horizontal" >
	        
		    <TextView
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/hostformal" />
		    
		    <TextView
		        android:layout_width="@dimen/activity_vertical_margin"
		        android:layout_height="wrap_content"
		        android:text="" />
		    
		    <EditText
		        android:id ="@+id/formaladdr"
		        android:layout_width="match_parent"
		        android:layout_height="wrap_content"
		        android:hint="@string/editformal"
		        android:singleLine="true" />
	        
	    </LinearLayout> 
	    
	    <LinearLayout
	        android:layout_width="wrap_content"
	        android:layout_height="10dp"
	        android:orientation="horizontal">	        
	    </LinearLayout>
	    
	    
	     <LinearLayout
	         android:layout_width="wrap_content"
	         android:layout_height="wrap_content"
	         android:orientation="horizontal" >

         <TextView
		        android:layout_width="90dp"
		        android:layout_height="wrap_content"
		        android:text="" />
	         
	        <Button
	            android:id="@+id/testbtn"
	            android:layout_width="110dp"
	            android:layout_height="55dp"
	            android:textSize = "22sp"
	            android:text="@string/testbtnc" />
	
	        <Button
	            android:id="@+id/formalbtn"
	            android:layout_width="110dp"
	            android:layout_height="55dp"
	            android:text="@string/formalbtnc"
	            android:textSize="22sp" />
	        
	    </LinearLayout>
	     <LinearLayout android:layout_width="wrap_content" android:layout_height="wrap_content" android:orientation="horizontal">

		    <TextView
		        android:layout_width="192dp"
		        android:layout_height="wrap_content"
		        android:text="255.255.255.255"
		        android:textSize="24sp"
		        android:textStyle="bold" />

		    <Button
		        android:id="@+id/refreshhostbtn"
		        android:layout_width="wrap_content"
		        android:layout_height="wrap_content"
		        android:text="@string/refreship" />
	    </LinearLayout>
    </LinearLayout>

</RelativeLayout>